--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "0.0.1"
+version = "BETA-0.0.2"
 group= "com.tyman.DetonatorMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "detonatormod"
 
@@ -37,12 +37,8 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
-repositories {
-		maven { url 'https://jitpack.io' }
-}
-
 dependencies {
-	compile "com.github.KevinPriv:HypixelApi4J:API-1.7"
+	
 }
 
 processResources
