--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "BETA-0.0.5"
-group= "com.tyman.DetonatorMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "detonatormod"
+version = "0.0.6-beta"
+group= "com.tyman.KryptoMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "kryptomod"
 
 minecraft {
     version = "1.8.9-11.15.1.1722"
