--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,5 +24,5 @@ jobs:
       run: ./gradlew build
     - uses: actions/upload-artifact@v2
       with:
-        name: Package
+        name: Compiled_jars
         path: build/libs/
